# backend-node-vix-test/src/routes/auth.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { UserController } from "../controllers/UserController";
 import { API_VERSION } from "../constants/basePathRoutes";
+import { authUser } from "../auth/authUser";
 
 const authRoutes = Router();
 const userController = new UserController();
@@ -18,6 +19,14 @@ authRoutes.post(`${BASE_PATH}/login`, async (req, res, next) => {
 authRoutes.post(`${BASE_PATH}/register`, async (req, res, next) => {
   try {
     await userController.register(req, res);
+  } catch (error) {
+    next(error);
+  }
+});
+
+authRoutes.post(`${BASE_PATH}/refresh`, authUser, async (req, res, next) => {
+  try {
+    await userController.refreshToken(req, res);
   } catch (error) {
     next(error);
   }
